@@ -197,6 +197,53 @@ void str_base64_encode(const char *p_str, char *p_b64str, int in_size)
 }
 /*------------------------------------------------------------------------
  *
+ * Function	:  str_base64_encode_dyn
+ *
+ * Purpose	:  Encode a string into a base64 string
+ *                 with dynamical memory allocation
+ *
+ * Parameters	:  p_str (in)		- the string to encode
+ *		   p_b64str (out)	- the pointer to encoded str
+ *                                        to return
+ *		   in_size (in)		- size (length) of input str
+ * Returns	:
+ *
+ * Comments	:  allocates memory!
+ *
+ *----------------------------------------------------------------------*/
+ void	str_base64_encode_dyn(const char *p_str, char **p_b64str, int in_size)
+ {
+	const char 	*pc;
+	char		*pc_r;
+	int		c_per_block = 0;	/* number of bytes which can be encoded to place in the buffer per time */
+	int		b_per_block = 0;	/* bytes in the buffer to store 'c_per_block' encoded bytes */
+	int		full_block_num = 0;
+	int		bytes_left = 0;		/* less then 'c_per_block' bytes left */
+	int		bytes_for_left = 0;	/* bytes in the buffer to store 'bytes_left' encoded bytes */
+	
+	assert(p_str);
+	assert(p_b64str);
+	assert(!*p_b64str);	/* expect a pointer will NULL value, do not know whether allowed to free that memory */
+	
+	*p_b64str = zbx_malloc(*p_b64str, in_size / 3 * 4 + (in_size % 3 ? 4 + 1 : 1));
+	c_per_block = (ZBX_MAX_B64_LEN - 1) / 4 * 3;
+	b_per_block = c_per_block / 3 * 4;
+	full_block_num = in_size / c_per_block;
+	bytes_left = in_size % c_per_block;
+	bytes_for_left = bytes_left / 3 * 4 + (bytes_left % 3 ? 4 : 0);
+	
+	for (pc = p_str, pc_r = *p_b64str; full_block_num; pc += c_per_block, pc_r += b_per_block, --full_block_num)
+		str_base64_encode(pc, pc_r, c_per_block);
+	if (bytes_left)
+	{
+		str_base64_encode(pc, pc_r, bytes_left);
+		pc_r += bytes_for_left;
+	}
+	
+	*pc_r = '\0';
+ }
+/*------------------------------------------------------------------------
+ *
  * Function	:  str_base64_decode
  *
  * Purpose	:  Decode a base64 string into a string
